# Coinisky_Algo

./: README.md
APIs/: s3.js  sns.js  superset.js
Paraphrasing/: README.md  cleanup.sh  docker-compose.yaml
Paraphrasing/.github/workflows/: deploy.yml
Paraphrasing/services/api/: .env  Dockerfile  data.txt  main.py  requirements.txt  server.py
Paraphrasing/services/traefik/: traefik.toml
Paraphrasing/utils/APIs/: airflow.js  athena.js
Paraphrasing/utils/lambda-functions/CreateSupersetUser/: UseSupersetApi.py  lambda_function.py
Paraphrasing/utils/python_script/: config.py  feature_engineering.py  models.py  pandas_description.py
SQLNet/: .download_glove.sh.swp  load_train_and_test.ipynb  pyproject.toml  requirements.txt  train.py
SQLNet/.ipynb_checkpoints/: load_train_and_test-checkpoint.ipynb
SQLNet/sqlnet/: utils.py
SQLNet/sqlnet/model/: seq2sql.py  sqlnet.py
SQLNet/sqlnet/model/modules/: aggregator_predict.py  selection_predict.py  sqlnet_condition_predict.py
lambda-functions/CreateSupersetUser/: lambda_function.py
python_script/: pandas_description.py  utils.py
utils/: notifications.js  upload.js
