[tool.poetry]
name = "sqlnet"
version = "0.1.0"
description = ""
authors = ["apoorv omar <apoorv@simplifyvms.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Babel = "^2.9.1"
docopt = "^0.6.2"
et-xmlfile = "^1.1.0"
jdcal = "^1.4.1"
odfpy = "^1.4.1"
olefile = "^0.46"
pytz = "^2021.3"
records = "^0.5.3"
SQLAlchemy = "^1.4.31"
tablib = "^3.2.0"
unicodecsv = "^0.14.1"
xlrd = "^2.0.1"
xlwt = "^1.3.0"
torch = "^1.10.2"
numpy = "^1.22.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
